--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
-dist/
+dist
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
