--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,17 @@
 {
   "presets": [
-    "es2015",
-    "stage-2",
-    "flow",
+    "stage-0",
     "react",
-    "env",
+    "flow",
+    [
+      "env",
+      {
+        "targets": {
+          "node": "current"
+        },
+        "modules": false
+      }
+    ],
     [
       "env",
       {
@@ -16,29 +23,5 @@
       }
     ]
   ],
-  "plugins": [
-    [
-      "transform-runtime",
-      {
-        "helpers": false,
-        "polyfill": false,
-        "regenerator": true,
-        "moduleName": "babel-runtime"
-      }
-    ],
-    "babel-plugin-syntax-dynamic-import",
-    "babel-plugin-dynamic-import-webpack",
-    "babel-plugin-transform-class-properties",
-    "transform-object-rest-spread",
-    "babel-plugin-transform-async-to-generator",
-    "babel-plugin-styled-components"
-  ],
-  "env": {
-    "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
-    },
-    "server": {
-      "plugins": ["transform-es2015-modules-commonjs"]
-    }
-  }
+  "plugins": ["transform-regenerator", "transform-runtime"]
 }
