--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "description": "A test project for the warehouse I used to work.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/bundle-backend.js",
     "dboff": "killall mongod",
-    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
+    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"server/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server",
-    "prod": "npm run webpack -- --env.mode production",
-    "dev": "npm run webpack -- --env.mode development --watch",
-    "dev:back": "npm run dev -- --env.side back",
-    "dev:server": "nodemon ./dist/bundle-backend.js"
+    "server": "webpack --env.mode development"
   },
   "repository": {
     "type": "git",
@@ -42,6 +36,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "dotenv-webpack": "^1.5.7",
     "eslint": "^5.1.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -54,13 +49,17 @@
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.7",
-    "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "start-server-webpack-plugin": "^2.2.5",
+    "webpack": "^4.15.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-node-externals": "^1.7.2"
   }
 }
