--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dboff": "killall mongod",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"server/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
-    "server": "webpack --env.mode development"
+    "webpack": "webpack",
+    "server": "npm run webpack -- --env.mode development --env.side server"
   },
   "repository": {
     "type": "git",
