--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"server/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "webpack": "webpack",
+    "clean": "shx rm -rf ./dist",
     "server": "npm run webpack -- --env.mode development --env.side server"
   },
   "repository": {
@@ -50,6 +51,7 @@
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.7",
+    "shx": "^0.3.2",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3"
   },
