--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint **/*.{js,jsx} --quiet",
     "webpack": "webpack",
     "clean": "shx rm -rf ./dist",
-    "server": "npm run webpack -- --env.mode development --env.side server"
+    "dev": "npm run webpack -- --env.mode development",
+    "dev:server": "npm run dev -- --env.side server"
   },
   "repository": {
     "type": "git",
