--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dboff": "killall mongod",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"server/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
-    "webpack": "webpack",
+    "webpack": "webpack --require dotenv/config",
     "clean": "shx rm -rf ./dist",
     "prod": "npm run webpack -- --env.mode production",
     "prod:server": "npm run prod -- --env.side server",
@@ -64,6 +64,7 @@
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
+    "mongoose": "^5.2.3",
     "start-server-webpack-plugin": "^2.2.5",
     "webpack": "^4.15.1",
     "webpack-dev-middleware": "^3.1.3",
