--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prod": "npm run webpack -- --env.mode production",
     "prod:server": "npm run prod -- --env.side server",
     "dev": "npm run webpack -- --env.mode development",
+    "dev:db": "mongod",
     "dev:client": "npm run dev -- --env.side client",
     "dev:server": "npm run dev -- --env.side server"
   },
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.5",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "shx": "^0.3.2",
     "webpack-cli": "^3.0.8",
@@ -61,6 +63,7 @@
   },
   "dependencies": {
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
