--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
