--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,6 +1,5 @@
 {
   "presets": [
-    "es2015",
     "stage-2",
     "flow",
     "react",
@@ -25,6 +24,7 @@
         "moduleName": "babel-runtime"
       }
     ],
+    "react-hot-loader/babel",
     "babel-plugin-syntax-dynamic-import",
     "babel-plugin-dynamic-import-webpack",
     "babel-plugin-transform-class-properties",
