--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prod:server": "npm run prod -- --env.side server",
     "dev": "npm run webpack -- --env.mode development",
     "dev:db": "mongod",
-    "dev:client": "npm run dev -- --env.side client",
+    "dev:client": "webpack-dev-server --hot --env.side client --env.mode development",
     "dev:server": "npm run dev -- --env.side server"
   },
   "repository": {
@@ -53,7 +53,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
-    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
@@ -69,12 +68,17 @@
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.4",
     "start-server-webpack-plugin": "^2.2.5",
     "webpack": "^4.15.1",
     "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-node-externals": "^1.7.2"
   }
