--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node --require dotenv/config dist/server.js",
     "dboff": "killall mongod",
-    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"server/**/*.{js,jsx}\"",
+    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"{server,client}/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "webpack": "webpack --require dotenv/config",
     "clean": "shx rm -rf ./dist",
@@ -61,9 +61,11 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
