--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node --require dotenv/config dist/server.js",
     "dboff": "killall mongod",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"{server,client}/**/*.{js,jsx}\"",
+    "flow": "flow",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "webpack": "webpack --require dotenv/config",
     "clean": "shx rm -rf ./dist",
@@ -28,6 +29,7 @@
   },
   "homepage": "https://github.com/tearingItUp786/gib_mern#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.5",
@@ -53,6 +55,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
+    "flow-bin": "^0.77.0",
+    "flow-typed": "^2.5.1",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
@@ -77,6 +81,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.4",
+    "react-router-dom": "^4.3.1",
     "start-server-webpack-plugin": "^2.2.5",
     "webpack": "^4.15.1",
     "webpack-dev-middleware": "^3.1.3",
