--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,23 @@
   "rules": {
     "linebreak-style": 0,
     "flowtype/no-types-missing-file-annotation": 0,
-    "import/no-dynamic-require": 0,
-    "global-require": 0,
-    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
+    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }],
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["to", "hrefLeft", "hrefRight"],
+        "aspects": ["noHref", "invalidHref", "preferButton"]
+      }
+    ],
+    "jsx-a11y/label-has-for": [
+      2,
+      {
+        "required": {
+          "every": ["id"]
+        }
+      }
+    ],
+    "no-return-assign": 0
   }
 }
