--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-hot-loader": "^4.3.4",
     "react-router-dom": "^4.3.1",
     "start-server-webpack-plugin": "^2.2.5",
+    "styled-components": "^3.3.3",
     "webpack": "^4.15.1",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
