--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "shx": "^0.3.2",
+    "stylelint": "^9.4.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-custom-processor-loader": "^0.5.0",
+    "stylelint-processor-styled-components": "^1.3.2",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3"
   },
