--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         }
       }
     ],
-    "no-return-assign": 0
+    "no-return-assign": 0,
+    "react/destructuring-assignment": [true, { "extensions": [".jsx"] }]
   }
 }
