--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node --require dotenv/config dist/server.js",
     "dboff": "killall mongod",
-    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"{server,client}/**/*.{js,jsx}\"",
+    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"{server,client}/**/*.{js,vue}\"",
     "flow": "flow",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "webpack": "webpack --require dotenv/config",
@@ -45,7 +45,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^5.1.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-vue": "^4.7.1",
     "flow-bin": "^0.77.0",
     "flow-typed": "^2.5.1",
     "nodemon": "^1.17.5",
@@ -64,12 +66,16 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-custom-processor-loader": "^0.5.0",
     "stylelint-processor-styled-components": "^1.3.2",
+    "vue-loader": "^15.2.6",
+    "vue-style-loader": "^4.1.1",
+    "vue-template-compiler": "^2.5.17",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-vue": "^2.0.2",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -83,6 +89,8 @@
     "mongoose": "^5.2.3",
     "start-server-webpack-plugin": "^2.2.5",
     "styled-components": "^3.3.3",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "webpack": "^4.15.1",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
