--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["plugin:flowtype/recommended", "prettier", "plugin:vue/essential"],
+  "extends": ["plugin:flowtype/recommended", "plugin:vue/essential", "prettier"],
   "plugins": ["flowtype", "prettier"],
   "parserOptions": {
     "parser": "babel-eslint",
@@ -13,6 +13,7 @@
     "jest": true
   },
   "rules": {
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "prettier/prettier": ["error", { "singleQuote": true }]
   }
 }
