--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "node --require dotenv/config dist/server.js",
     "dboff": "killall mongod",
-    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"{server,client}/**/*.{js,vue}\"",
+    "format": "prettier --write --single-quote --tab-width=2 \"{build-utils,server,client}/**/*.{js,vue}\"",
     "flow": "flow",
-    "lint": "eslint \"**/*.{js,vue}\" --quiet",
     "webpack": "webpack --require dotenv/config",
     "clean": "shx rm -rf ./dist",
     "prod": "npm run webpack -- --env.mode production",
@@ -16,7 +15,9 @@
     "dev": "npm run webpack -- --env.mode development",
     "dev:db": "mongod",
     "dev:client": "webpack-dev-server --hot --env.side client --env.mode development",
-    "dev:server": "npm run dev -- --env.side server"
+    "dev:server": "npm run dev -- --env.side server",
+    "lint": "eslint \"{build-utils,server,client}/**/*.{js,vue}\" --quiet",
+    "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
     "type": "git",
@@ -46,7 +47,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
@@ -54,11 +55,13 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-vue": "^4.7.1",
+    "eslint-plugin-vue": "^5.0.0-beta.2",
     "flow-bin": "^0.77.0",
     "flow-typed": "^2.5.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
+    "postcss-loader": "^2.1.6",
     "prettier": "^1.13.7",
     "shx": "^0.3.2",
     "stylelint": "^9.4.0",
@@ -66,6 +69,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-custom-processor-loader": "^0.5.0",
     "stylelint-processor-styled-components": "^1.3.2",
+    "tailwindcss": "^0.6.4",
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.17",
