Typescript support with vue and class decorators added

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "extends": ["plugin:flowtype/recommended", "plugin:vue/essential", "prettier"],
-  "plugins": ["flowtype", "prettier"],
+  "extends": ["plugin:vue/essential", "prettier"],
+  "plugins": ["prettier"],
   "parserOptions": {
     "parser": "babel-eslint",
     "ecmaVersion": 2016,
