--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "stylelint-custom-processor-loader": "^0.5.0",
     "stylelint-processor-styled-components": "^1.3.2",
     "tailwindcss": "^0.6.4",
+    "ts-loader": "^5.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3",
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.17",
@@ -89,6 +92,8 @@
     "start-server-webpack-plugin": "^2.2.5",
     "styled-components": "^3.3.3",
     "vue": "^2.5.17",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "webpack": "^4.15.1",
     "webpack-dev-middleware": "^3.1.3",
