Update models to be deleted from mongoose on js update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "moduleResolution": "node",
       "target": "es5",
       "experimentalDecorators": true,
+      "allowJs": true,
       "lib": [
         "es2015",
         "dom"
