--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,9 @@
 {
-  "extends": ["plugin:vue/essential", "prettier"],
+  "extends": ["plugin:vue/recommended", "prettier"],
   "plugins": ["prettier"],
+  "parser": "vue-eslint-parser",
   "parserOptions": {
-    "parser": "babel-eslint",
-    "ecmaVersion": 2016,
-    "sourceType": "module"
+      "parser": "typescript-eslint-parser"
   },
   "env": {
     "es6": true,
