--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev:db": "mongod",
     "dev:client": "webpack-dev-server --open --hot --env.side client --env.mode development",
     "dev:server": "npm run dev -- --env.side server",
-    "lint": "eslint \"{build-utils,server,client}/**/*.{js,vue}\" --quiet",
+    "lint": "eslint -c \"./.eslintrc.json\" \"{build-utils,server,client}/**/*.{js,vue}\" --quiet",
     "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
@@ -45,14 +45,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-vue": "^5.0.0-beta.2",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
     "mini-css-extract-plugin": "^0.4.1",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
@@ -68,6 +68,7 @@
     "ts-loader": "^5.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
+    "typescript-eslint-parser": "^18.0.0",
     "vue-loader": "^15.2.6",
     "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.17",
@@ -93,6 +94,7 @@
     "styled-components": "^3.3.3",
     "vue": "^2.5.17",
     "vue-class-component": "^6.2.0",
+    "vue-eslint-parser": "^3.2.2",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "webpack": "^4.15.1",
