--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,10 +4,11 @@
     "at-rule-no-unknown": [ true, {
       "ignoreAtRules": [
         "extends",
-        "tailwind"
+        "tailwind",
+        "apply"
       ]
     }],
     "block-no-empty": null,
-    "unit-whitelist": ["em", "rem", "s"]
+    "unit-whitelist": ["em", "rem", "s", "px", "vw"]
   }
 }
